# FastReco

./: .gitignore  CMakeLists.txt  smearSAND.C
include/: display.h  struct.h  utils.h
src/: fastreco.cpp  utils.cpp
